Add test_nodes to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,14 @@
-cmake_minimum_required( VERSION 3.0 )
-project( dijkstra )
-add_executable( dijkstra ./apps/main.cpp )
+cmake_minimum_required(VERSION 3.0)
+
+project(dijkstra
+        VERSION 0.1.0
+        DESCRIPTION "Dijsktra's shortest path algorithm"
+        LANGUAGES CXX)
+
+include_directories( ./include ./src )
+
+add_executable(dijkstra ./apps/main.cpp )
+
+# find_package(GTest REQUIRED)
+# "Unit tests", TODO: use gtest, https://github.com/bast/gtest-demo
+add_executable(test_nodes ./test/test_nodes.cpp ./src/Node.cpp )
