Move simple implementations to header files
Learned that it's perfectly valid to have small implementations in
header files, and they are actually inlined.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,5 @@ add_executable(dijkstra ./apps/main.cpp )
 
 # find_package(GTest REQUIRED)
 # "Unit tests", TODO: use gtest, https://github.com/bast/gtest-demo
-add_executable(test_node ./test/test_node.cpp ./src/Node.cpp)
-add_executable(test_edge ./test/test_edge.cpp ./src/Node.cpp ./src/Edge.cpp)
+add_executable(test_node ./test/test_node.cpp)
+add_executable(test_edge ./test/test_edge.cpp)
